--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,10 +1,11 @@
+@import './globals.scss';
 
 .page {
-    outline: 1px solid red;
     height: 100vh;
     width: 100vw;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 
-    display: grid;
-    grid-template-rows: 1fr auto;    
-    grid-template-areas: "video" "marquee";
+    background-color: darken($dark, 5);
 }
