--- a/app/globals.scss
+++ b/app/globals.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto:wght@400;700&display=swap');
 
 $dark: #0b3954ff;
-$light: white;
+$light: #eee;
 //$teal: #087e8bff;
 $light-blue: #bfd7eaff;
 //$bittersweet: #ff5a5fff;
