--- a/app/components/Overlay/Overlay.module.scss
+++ b/app/components/Overlay/Overlay.module.scss
@@ -8,13 +8,16 @@
     z-index: 99;
     top: 0;
     left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 
     opacity: 0;
     transform: opacity .6s ease;
     pointer-events: none;
-
+    
     &.visible {
         opacity: 1;
-        //pointer-events: auto;
+        pointer-events: auto;
     }
 }
