--- a/app/components/ScoreBoard/ScoreBoard.module.scss
+++ b/app/components/ScoreBoard/ScoreBoard.module.scss
@@ -8,7 +8,7 @@
     align-items: center;
 
     z-index: 2;
-    background: white; 
+    background: $dark; 
 
     p {
         padding: 0 $pad 0 $pad;
@@ -20,7 +20,7 @@
         &.score {
             background: $light;
             color: $dark;
-            padding: 0 $pad 0 $pad;
+            //padding: 0 $pad 0 $pad;
             font-weight: 700;
 
             span {
@@ -29,7 +29,8 @@
             }
         }
         &.time {
-            background: $red;
+            background: $primary;
+            padding: 0 $pad*2 0 $pad*2;
             color: $light;
             font-weight: 700;
         }
