--- a/app/components/VideoPlayer/VideoPlayer.module.scss
+++ b/app/components/VideoPlayer/VideoPlayer.module.scss
@@ -2,19 +2,25 @@
 .videoPlayer {
 
     width: 80vw;
+    max-width: 1200px;
     border-radius: 5px;
     overflow: hidden;
 
     display: grid;
-    grid-template-rows: 40px 1fr;    
+    grid-template-rows: 55px 1fr;    
     grid-template-areas: "scores" "video";
 
+    position: relative;
+
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;    //background: black;
+
+    @media (orientation: portrait) {
+        width: 100vw;        
+    }
 
     video {
         grid-area: video;
         width: 100%;
         height: auto;
     }
-    
 }
