--- a/app/components/Marquee/Marquee.module.scss
+++ b/app/components/Marquee/Marquee.module.scss
@@ -3,6 +3,7 @@
 .marquee {
     overflow: hidden;
     height: 100%;
+    //width: 100%;
     display: flex;
     align-items: center;
     background: $dark;
@@ -12,7 +13,6 @@
         display: inline-block;
         animation: marquee 0s linear infinite;
         color: $light;
-
     }
 
     @keyframes marquee {
