--- a/app/components/Button/Button.module.scss
+++ b/app/components/Button/Button.module.scss
@@ -2,7 +2,7 @@
 
 .button {
     min-width: 100px;
-    padding: $pad $pad*2 $pad $pad*2;
+    padding: $space $space*2 $space $space*2;
     color: $light;
     background: $primary;
     border-radius: 5px;
