--- a/app/components/VideoPlayer/VideoPlayer.module.scss
+++ b/app/components/VideoPlayer/VideoPlayer.module.scss
@@ -1,18 +1,17 @@
 
 .videoPlayer {
 
-    width: 80vw;
-    max-width: 1200px;
-    border-radius: 5px;
-    overflow: hidden;
-
     display: grid;
     grid-template-rows: 55px 1fr;    
     grid-template-areas: "scores" "video";
 
+    width: 80vw;
+    max-width: 1200px;
+    overflow: hidden;
     position: relative;
 
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;    //background: black;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 
     @media (orientation: portrait) {
         width: 100vw;        
