--- a/app/globals.scss
+++ b/app/globals.scss
@@ -5,14 +5,14 @@ $dark: #1C1F33;
 $primary: #2a4494ff;
 $light: #e0f2e9ff;
 
-$pad: 12px;
+$space: 12px;
 
 :export {
     dark: $dark;
     light: $light;
     primary: $primary;
 
-    pad: $pad;
+    space: $space;
 }
 
 .body {
