--- a/app/components/Overlay/Overlay.module.scss
+++ b/app/components/Overlay/Overlay.module.scss
@@ -1,21 +1,21 @@
 @import '../../globals.scss';
 
 .overlay {
+    display: flex;
     position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 99;
     top: 0;
     left: 0;
-    display: flex;
-    align-items: center;
     justify-content: space-around;
+    align-items: center;
+    transform: opacity 0.6s ease;
 
     opacity: 0;
-    transform: opacity .6s ease;
+    z-index: 99;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
     pointer-events: none;
-    
+
     &.visible {
         opacity: 1;
         pointer-events: auto;
